sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: illegal start of simple expression
    if ()
        ^AlgGnomeSort:6: error: ')' expected but '}' found.
  }
  ^