sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i:Int = 0
  while (i != getNombreValeurs() - 1) {
    if ()
  }
}
